# who-was-i

./: LICENSE  README.md
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 18dad24bc36c_create_rooms_table.py  1ee8918c0a47_init.py
backend/app/: main.py
backend/app/api/: health.py  ready.py
backend/app/api/v1/: rooms.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: room.py
backend/app/schema/: room.py
backend/app/services/: join_token_service.py  room_join_service.py  rooms.py
backend/app/state/: connections.py
frontend/: .cta.json  package-lock.json  package.json  vite.config.ts
frontend/src/: styles.css
frontend/src/components/: ChatCard.tsx  ChatInput.tsx  RoomAccessCard.tsx  RoomHeader.tsx  SetDisplayName.tsx
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/room/: $roomId.tsx
